--- a/frontend/src/app/components/claims/create-claim/create-claim.component.scss
+++ b/frontend/src/app/components/claims/create-claim/create-claim.component.scss
@@ -43,3 +43,12 @@ legend {
 }
 
 .carousel-indicators {width: 10%}
+
+.map {
+  width: 1000px;
+  height: 500px;
+}
+.ya-map-container {
+  width: 300px;
+  height: 200px;
+}
