--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -37,7 +37,7 @@
             </label>
             <div class="col-sm">
               <input type="text" class="form-control" id="surName"
-                     formControlName="surName"/>
+                     formControlName="surName" [(ngModel)]="applicationLightForm.surName"/>
               <div *ngIf="f.surName.touched && f.surName.invalid" class="text-danger">
                 <div *ngIf="f.surName.errors.required" translate>claim.requiredField</div>
               </div>
@@ -49,7 +49,7 @@
             </label>
             <div class="col-sm">
               <input type="text" class="form-control" id="name"
-                     formControlName="name"/>
+                     formControlName="name" [(ngModel)]="applicationLightForm.name"/>
               <div *ngIf="f.name.touched && f.name.invalid" class="text-danger">
                 <div *ngIf="f.name.errors.required" translate>claim.requiredField</div>
               </div>
@@ -59,7 +59,7 @@
             <label for="patronymic" class="col-sm-3 col-form-label" translate>patronymic</label>
             <div class="col-sm">
               <input type="text" class="form-control" id="patronymic"
-                     formControlName="patronymic">
+                     formControlName="patronymic" [(ngModel)]="applicationLightForm.patronymic">
             </div>
           </div>
           <div class="form-group row">
