--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="wrapper">
   <app-nav></app-nav>
-  <router-outlet (activate)="onActivate($event)" >
+  <router-outlet>
     <app-create-claim-btn></app-create-claim-btn>
     <app-scroll-up></app-scroll-up>
   </router-outlet>
