--- a/frontend/src/app/components/objects/objects.component.html
+++ b/frontend/src/app/components/objects/objects.component.html
@@ -619,7 +619,7 @@
             <tbody style="cursor: pointer">
             <tr *ngFor="let object of objectsData;let i = index">
               <td>{{object.realPropertyId}}</td>
-              <td><img [src]="getImgUrl(object)" alt="First Slide" class="photoList" height="100px"></td>
+              <td><img *ngIf="getImgUrl(object)" [src]="getImgUrl(object)" alt="First Slide" class="photoList" height="100px"></td>
               <td>{{object.address.nameRu}}</td>
               <td>{{object.price}}</td>
               <td>{{object.numberOfRooms}}</td>
