--- a/frontend/src/app/components/objects/objects.component.html
+++ b/frontend/src/app/components/objects/objects.component.html
@@ -104,7 +104,7 @@
                 <div class="form-group row">
                   <label class="col-sm col-form-label text-right">Номер квартиы</label>
                   <div class="col-sm">
-                    <input type="text" oninput="this.value=this.value.replace(/[^0-9]/g,'');"  class="form-control" min="10"
+                    <input type="text" oninput="this.value=this.value.replace(/[^0-9]/g,'');"  class="form-control"
                            [(ngModel)]="formData.numKvart" [ngModelOptions]="{standalone: true}">
                   </div>
                 </div>
