--- a/frontend/src/app/components/claims/create-claim/create-claim.component.html
+++ b/frontend/src/app/components/claims/create-claim/create-claim.component.html
@@ -1447,7 +1447,7 @@
           </div>
           <div class="row">
             <div class="col-sm">
-
+              <button (click)="showModalChooseClaim()">asd</button>
               <button type="button" mdbBtn color="success" class="btn btn-info btn-sm btn2 float-right"
                       mdbWavesEffect (click)="submit()" *ngIf="edit"
                       [disabled]="!this.applicationForm?.operationTypeId && !this.applicationForm?.objectTypeId">
