--- a/frontend/src/app/components/claims/create-claim/create-claim.component.html
+++ b/frontend/src/app/components/claims/create-claim/create-claim.component.html
@@ -1245,7 +1245,7 @@
 
           </div>
           <br/>
-          <div class="row">
+          <div class="row" *ngIf="isSell()">
             <div class="col-sm">
               <div class="accordion" id="accordionMap">
                 <div class="card z-depth-0 bordered">
